Fix program page: remove duplicate button, add clickable map links for locations

--- a/program.html
+++ b/program.html
@@ -46,7 +46,7 @@
                         <li>Small-sided games and futsal tournaments</li>
                         <li>Perfect for developing close control and creativity</li>
                     </ul>
-                    <div class="location"><strong>Location: XLSW Apex, 1016 Investment Blvd</strong></div>
+                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
                         <li>Position-specific training</li>
                         <li>Focus on building complete players</li>
                     </ul>
-                    <div class="location"><strong>Location: Mills Park, 425 Mills Park Dr, Cary, NC 27519 and CM Herndon Park, 511 Scott King Rd, Durham, NC 27713</strong></div>
+                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=425+Mills+Park+Dr,+Cary,+NC+27519" target="_blank">Mills Park</a> and <a href="https://www.google.com/maps/search/?api=1&query=511+Scott+King+Rd,+Durham,+NC+27713" target="_blank">CM Herndon Park</a></strong></div>
                 </div>
             </div>
 
@@ -88,7 +88,7 @@
                         <li>Focused skill development</li>
                         <li>Custom training plans based on player needs</li>
                     </ul>
-                    <div class="location"><strong>Location: Hunter Street Park, Apex Nature Park, or XLSW Apex</strong></div>
+                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1250+Ambergate+Station,+Apex,+NC+27502" target="_blank">Hunter Street Park</a>, <a href="https://www.google.com/maps/search/?api=1&query=2600+Evans+Rd,+Apex,+NC+27502" target="_blank">Apex Nature Park</a>, or <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
                 </div>
             </div>
 
@@ -110,7 +110,7 @@
                         <li>Perfect complement to soccer training</li>
                         <li>Builds confidence and self-defense skills</li>
                     </ul>
-                    <div class="location"><strong>Location: Cary Judo Club, 5563 Western Blvd, Suite 12, Raleigh, NC 27606</strong></div>
+                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=5563+Western+Blvd,+Suite+12,+Raleigh,+NC+27606" target="_blank">Cary Judo Club</a></strong></div>
                 </div>
             </div>
 
@@ -133,7 +133,7 @@
                         <li>Enhances creative thinking for set pieces in soccer</li>
                         <li>Fun way to cross-train</li>
                     </ul>
-                    <div class="location"><strong>Location: XLSW Apex, 1016 Investment Blvd</strong></div>
+                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
                 </div>
             </div>
         </div>
