Update program page: remove duplicate button, add intro blurb, enhance judo details

--- a/program.html
+++ b/program.html
@@ -23,12 +23,14 @@
         <div id="welcome-section">
             <h2>Welcome to Apex Athletic Club</h2>
             <h4>A Talent Factory for Promising Individuals</h4>
-            <button id="learn-more" class="cta-button">LEARN MORE</button>
+            <button id="build-program" class="cta-button">BUILD A SPORTS PROGRAM</button>
         </div>
     </div>
 
     <!-- Program content on white background -->
     <div class="program-content">
+        <p>Our coaches are full-time professionals that utilize best practices from the top youth academies around the world. We offer 12 months of programming across multiple sports with the primary focus on soccer.</p>
+        
         <div class="sport-selection">
             <!-- Indoor Soccer -->
             <div class="sport-option">
@@ -106,8 +108,8 @@
                         <li>Professional, licensed coaches</li>
                         <li>Led by experienced black belt instructors</li>
                         <li>Develops balance, coordination, and mental discipline</li>
-                        <li>Competition opportunities through USA Judo</li>
-                        <li>Perfect complement to soccer training</li>
+                        <li>Used by top clubs like Ajax for youth training</li>
+                        <li>Enhances physical and mental resilience</li>
                         <li>Builds confidence and self-defense skills</li>
                     </ul>
                     <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=5563+Western+Blvd,+Suite+12,+Raleigh,+NC+27606" target="_blank">Cary Judo Club</a></strong></div>
