Adjust button size and blurb styling on program page

--- a/program.html
+++ b/program.html
@@ -29,7 +29,7 @@
 
     <!-- Program content on white background -->
     <div class="program-content">
-        <p>Our coaches are full-time professionals that utilize best practices from the top youth academies around the world. We offer 12 months of programming across multiple sports with the primary focus on soccer.</p>
+        <p style="font-weight: bold; margin-bottom: 20px;">Our coaches are full-time professionals that utilize best practices from the top youth academies around the world. We offer 12 months of programming across multiple sports with the primary focus on soccer.</p>
         
         <div class="sport-selection">
             <!-- Indoor Soccer -->
