Add Basketball and Tumbling Gymnastics sections with 'COMING SOON' status

--- a/program.html
+++ b/program.html
@@ -138,6 +138,28 @@
                     <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
                 </div>
             </div>
+
+            <!-- Basketball -->
+            <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="basketball" disabled>
+                    <span class="sport-title">Basketball</span>
+                </div>
+                <div class="sport-details">
+                    <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
+                </div>
+            </div>
+
+            <!-- Tumbling Gymnastics -->
+            <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="tumbling-gymnastics" disabled>
+                    <span class="sport-title">Tumbling Gymnastics</span>
+                </div>
+                <div class="sport-details">
+                    <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
+                </div>
+            </div>
         </div>
         <button id="next-step">NEXT</button>
     </div>
