Add images to program page with clickable links and two-column layout

--- a/program.html
+++ b/program.html
@@ -49,6 +49,11 @@
                         <li>Perfect for developing close control and creativity</li>
                     </ul>
                     <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
+                    <div class="image-container">
+                        <a href="https://example.com/indoor-soccer" target="_blank">
+                            <img src="images/indoor-soccer.jpg" alt="Indoor Soccer">
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -70,6 +75,11 @@
                         <li>Focus on building complete players</li>
                     </ul>
                     <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=425+Mills+Park+Dr,+Cary,+NC+27519" target="_blank">Mills Park</a> and <a href="https://www.google.com/maps/search/?api=1&query=511+Scott+King+Rd,+Durham,+NC+27713" target="_blank">CM Herndon Park</a></strong></div>
+                    <div class="image-container">
+                        <a href="https://example.com/outdoor-soccer" target="_blank">
+                            <img src="images/outdoor-soccer.jpg" alt="Outdoor Soccer">
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -91,6 +101,11 @@
                         <li>Custom training plans based on player needs</li>
                     </ul>
                     <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1250+Ambergate+Station,+Apex,+NC+27502" target="_blank">Hunter Street Park</a>, <a href="https://www.google.com/maps/search/?api=1&query=2600+Evans+Rd,+Apex,+NC+27502" target="_blank">Apex Nature Park</a>, or <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
+                    <div class="image-container">
+                        <a href="https://example.com/small-group-training" target="_blank">
+                            <img src="images/small-group-training.jpg" alt="Small Group Training">
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -113,6 +128,11 @@
                         <li>Builds confidence and self-defense skills</li>
                     </ul>
                     <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=5563+Western+Blvd,+Suite+12,+Raleigh,+NC+27606" target="_blank">Cary Judo Club</a></strong></div>
+                    <div class="image-container">
+                        <a href="https://example.com/judo" target="_blank">
+                            <img src="images/judo.jpg" alt="Judo">
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -136,6 +156,11 @@
                         <li>Fun way to cross-train</li>
                     </ul>
                     <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
+                    <div class="image-container">
+                        <a href="https://example.com/flag-football" target="_blank">
+                            <img src="images/flag-football.jpg" alt="Flag Football">
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -147,6 +172,9 @@
                 </div>
                 <div class="sport-details">
                     <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
+                    <div class="image-container">
+                        <img src="images/basketball.jpg" alt="Basketball">
+                    </div>
                 </div>
             </div>
 
@@ -158,6 +186,9 @@
                 </div>
                 <div class="sport-details">
                     <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
+                    <div class="image-container">
+                        <img src="images/tumbling-gymnastics.jpg" alt="Tumbling Gymnastics">
+                    </div>
                 </div>
             </div>
         </div>
