Adjust image sizes and update images for sports sections

--- a/program.html
+++ b/program.html
@@ -51,6 +51,9 @@
                         <a href="https://example.com/indoor-soccer" target="_blank">
                             <img src="images/XLSWAPEX.png" alt="Indoor Soccer">
                         </a>
+                        <a href="https://example.com/us-futsal" target="_blank">
+                            <img src="images/USFUTSAL.png" alt="US Futsal">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -72,8 +75,14 @@
                         <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=425+Mills+Park+Dr,+Cary,+NC+27519" target="_blank">Mills Park</a> and <a href="https://www.google.com/maps/search/?api=1&query=511+Scott+King+Rd,+Durham,+NC+27713" target="_blank">CM Herndon Park</a></strong></div>
                     </div>
                     <div class="image-container">
-                        <a href="https://example.com/outdoor-soccer" target="_blank">
-                            <img src="images/CPR.png" alt="Outdoor Soccer">
+                        <a href="https://example.com/cary-parks" target="_blank">
+                            <img src="images/CPR.png" alt="Cary Parks">
+                        </a>
+                        <a href="https://example.com/durham-parks" target="_blank">
+                            <img src="images/DPR.png" alt="Durham Parks">
+                        </a>
+                        <a href="https://example.com/us-club-soccer" target="_blank">
+                            <img src="images/USCLUBSOCCER.webp" alt="US Club Soccer">
                         </a>
                     </div>
                 </div>
@@ -96,9 +105,10 @@
                         <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1250+Ambergate+Station,+Apex,+NC+27502" target="_blank">Hunter Street Park</a>, <a href="https://www.google.com/maps/search/?api=1&query=2600+Evans+Rd,+Apex,+NC+27502" target="_blank">Apex Nature Park</a>, or <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
                     </div>
                     <div class="image-container">
-                        <a href="https://example.com/small-group-training" target="_blank">
-                            <img src="images/USCLUBSOCCER.webp" alt="Small Group Training">
+                        <a href="https://example.com/xlsw-apex" target="_blank">
+                            <img src="images/XLSWAPEX.png" alt="XLSW Apex">
                         </a>
+                        <!-- Placeholder for Apex Parks Rec logo -->
                     </div>
                 </div>
             </div>
@@ -148,7 +158,7 @@
                     </div>
                     <div class="image-container">
                         <a href="https://example.com/flag-football" target="_blank">
-                            <img src="images/DPR.png" alt="Flag Football">
+                            <img src="images/XLSWAPEX.png" alt="Flag Football">
                         </a>
                     </div>
                 </div>
