Restore headers with checkboxes for each sport option

--- a/program.html
+++ b/program.html
@@ -34,6 +34,10 @@
         <div class="sport-selection">
             <!-- Indoor Soccer -->
             <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="indoor-soccer" checked disabled>
+                    <span class="sport-title">Indoor Soccer/Futsal</span>
+                </div>
                 <div class="sport-details">
                     <div class="text-content">
                         <div class="timeline"><strong>October - February and May - August</strong></div>
@@ -60,6 +64,10 @@
 
             <!-- Outdoor Soccer -->
             <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="outdoor-soccer" checked disabled>
+                    <span class="sport-title">Outdoor Soccer</span>
+                </div>
                 <div class="sport-details">
                     <div class="text-content">
                         <div class="timeline"><strong>March - May and August - October</strong></div>
@@ -90,6 +98,10 @@
 
             <!-- Small Group Training -->
             <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="small-group-training" checked disabled>
+                    <span class="sport-title">Small Group Training</span>
+                </div>
                 <div class="sport-details">
                     <div class="text-content">
                         <div class="timeline"><strong>Year-round</strong></div>
@@ -115,6 +127,10 @@
 
             <!-- Judo -->
             <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="judo">
+                    <span class="sport-title">Judo</span>
+                </div>
                 <div class="sport-details">
                     <div class="text-content">
                         <div class="timeline"><strong>October - February and May - August</strong></div>
@@ -140,6 +156,10 @@
 
             <!-- Flag Football -->
             <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="flag-football">
+                    <span class="sport-title">Flag Football</span>
+                </div>
                 <div class="sport-details">
                     <div class="text-content">
                         <div class="timeline"><strong>March - May and August - October</strong></div>
@@ -166,6 +186,10 @@
 
             <!-- Basketball -->
             <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="basketball" disabled>
+                    <span class="sport-title">Basketball</span>
+                </div>
                 <div class="sport-details">
                     <div class="text-content">
                         <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
@@ -178,6 +202,10 @@
 
             <!-- Tumbling Gymnastics -->
             <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="tumbling-gymnastics" disabled>
+                    <span class="sport-title">Tumbling Gymnastics</span>
+                </div>
                 <div class="sport-details">
                     <div class="text-content">
                         <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
